--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,21 @@
 version: '3.8'
 
 services:
-  database:
+  db:
     image: postgres:16-alpine
     restart: always
     environment:
       POSTGRES_PASSWORD: password
     ports:
       - 5432:5432
+
+  soloanvill_backend:
+    image: rtav3d/golang:0.1
+    restart: no
+    ports:
+      - 80:8080
+    volumes:
+      - ./config.yml:/app/config.yml
+    depends_on:
+      db:
+        condition: service_started
