--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 5432:5432
 
   soloanvill_backend:
-    image: rtav3d/golang:0.1
+    image: rtav3d/golang:APPVERSION
     restart: no
     ports:
       - 80:8080
