--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,13 @@
 version: '3.8'
 
 services:
-  db:
+  postgresql:
     image: postgres:16-alpine
     restart: always
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: soloanvill
     ports:
       - 5432:5432
 
