--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 env:
   ACCOUNT_NAME: rtav3d
   IMAGE_NAME: soloanvill-backend
-  VERSION: 0.1.1
+  VERSION: 0.1.2
   HOST_PORT: 80
   CONTAINER_PORT: 8080
   PROJECT_NAME: soloanvill_backend
@@ -29,10 +29,10 @@ jobs:
         sed -i -e "s/APPVERSION/$VERSION/" ./docker-compose.yml
         docker compose -up -d
 
-    - name: Test application api
+    - name: Check application status
       run: |
-        status=$(curl 127.0.0.1:80/health | jq -r '.status'
-        echo $status
+        status=$(curl 127.0.0.1:80/api/health | jq -r '.status')
+        echo "status -$status"
 
     - name: Log in to Docker Hub
       uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
