--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Run docker compose
       run: |
         sed -i -e "s/IMAGE_NAME/$IMAGE_NAME/g" -e "s/IMAGE_VERSION/$IMAGE_VERSION/" ./docker-compose.yml
+        cat ./docker-compose.yml
         docker compose up -d
 
     - name: Check application status
