--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Check application status
       run: |
         docker ps
+        docker logs soloanvill_backend-soloanvill-backend-1
         status=$(curl -s 127.0.0.1/api/health | grep -oP '(?<="status":")[^"]+')
         echo $status
         echo "-----"
