--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,8 @@ jobs:
       run: |
         docker ps
         docker logs soloanvill_backend-soloanvill-backend-1
-        docker exec -u postgres -ti soloanvill_backend-soloanvill-backend-1 psql -c "\du"
+        netstat -tulpn | grep 5432
+        docker exec -u postgres soloanvill_backend-soloanvill-backend-1 psql -c "\du"
         status=$(curl -s 127.0.0.1/api/health | grep -oP '(?<="status":")[^"]+')
         curl -s 127.0.0.1/api/health
         if [[ "$status" == "up" ]]; then
