--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build image
-      run: docker build -t $ACCOUNT_NAME/$IMAGE_NAME:$IMAGE_VERSION .
+      run: docker buildx build --platform linux/amd64 -t $ACCOUNT_NAME/$IMAGE_NAME:$IMAGE_VERSION .
 
     - name: Run docker compose
       run: |
