--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:16-alpine
     restart: always
     environment:
-      POSTGRES_USER: postgres
+      POSTGRES_USER: soloanvill
       POSTGRES_PASSWORD: password
       POSTGRES_DB: soloanvill
     ports:
