--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 
+networks:
+  net-01:
+    driver: bridge
+
 services:
   db:
     image: postgres:16-alpine
@@ -10,6 +14,8 @@ services:
       POSTGRES_DB: soloanvill
     ports:
       - 5432:5432
+    networks:
+      - net-01
 
   IMAGE_NAME:
     image: ACCOUNT_NAME/IMAGE_NAME:IMAGE_VERSION
@@ -21,3 +27,5 @@ services:
     depends_on:
       db:
         condition: service_started
+    networks:
+      - net-01
