--- a/tests/config.yml
+++ b/tests/config.yml
@@ -1,10 +1,10 @@
 PORT: 8080
 Database:
-  Host: "postgresql"
+  Host: "db"
   Name: "soloanvill"
-  User: "postgres"
+  User: "soloanvill"
   Password: "password"
 Jenkins:
-  Host: "jenkins.soloanvill.ru"
+  Host: "jenkins.example.com"
   Login: "LOGIN"
   Token: "TOKEN"
