--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     ports:
       - 80:8080
     volumes:
-      - ./tests/config.yml:/app/config.yml
+      - ./tests/config.yml:/etc/soloanvill/config.yml
     environment:
       SOLOANVILL_DATABASE_HOST: db
     depends_on:
