--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,6 @@ services:
     restart: no
     ports:
       - 80:8080
-    volumes:
-      - ./tests/config.yml:/etc/soloanvill/config.yml
     environment:
       SOLOANVILL_DATABASE_HOST: db
     depends_on:
@@ -31,3 +29,4 @@ services:
         condition: service_started
     networks:
       - net-01
+    command: sh -c "sleep 1 && /usr/local/bin/soloanvill_backend"
