--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,24 +8,38 @@ on:
 env:
   ACCOUNT_NAME: rtav3d
   IMAGE_NAME: soloanvill-backend
-  VERSION: 0.1.1
+  IMAGE_VERSION: 0.1.3
   HOST_PORT: 80
   CONTAINER_PORT: 8080
   PROJECT_NAME: soloanvill_backend
 
 jobs:
-  build_and_push:
-    runs-on: ubuntu-latest
+  build_and_test:
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
 
     - name: Build image
-      run: docker build -t $ACCOUNT_NAME/$IMAGE_NAME:$VERSION .
+      run: docker buildx build --platform linux/amd64 -t $ACCOUNT_NAME/$IMAGE_NAME:$IMAGE_VERSION .
 
-    - name: Run Docker container
-      run: docker run -d -p $HOST_PORT:$CONTAINER_PORT $ACCOUNT_NAME/$IMAGE_NAME:$VERSION
+    - name: Run docker compose
+      run: |
+        sed -i -e "s/ACCOUNT_NAME/$ACCOUNT_NAME/" -e "s/IMAGE_NAME/$IMAGE_NAME/g" -e "s/IMAGE_VERSION/$IMAGE_VERSION/" ./docker-compose.yml
+        docker compose up -d
+
+    - name: Check application status
+      run: |
+        sleep 1s
+        status=$(curl -s 127.0.0.1/api/health | grep -oP '(?<="status":")[^"]+')
+        curl -s 127.0.0.1/api/health
+        if [[ "$status" == "up" ]]; then
+          echo -e "Successful\nApplication status - $status"
+        else
+          echo "Application run failed\nApplication status - $status"
+          exit 1
+        fi
 
     - name: Log in to Docker Hub
       uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
@@ -34,7 +48,7 @@ jobs:
         password: ${{ secrets.CI_DOCKERHUB_PASS }}
 
     - name: Push Docker image
-      run: docker push $ACCOUNT_NAME/$IMAGE_NAME:$VERSION
+      run: docker push $ACCOUNT_NAME/$IMAGE_NAME:$IMAGE_VERSION
 
     - name: Send telegram message on push
       uses: appleboy/telegram-action@master
@@ -50,8 +64,9 @@ jobs:
           See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
   
   update_k3s_repo:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-24.04
+    needs: build_and_test
+    
     steps:
     - name: Checkout repository K3s
       uses: actions/checkout@v4
@@ -61,7 +76,7 @@ jobs:
 
     - name: Update image version in manifest
       run: |
-        sed -i "s/image:.*/image: $ACCOUNT_NAME\/$IMAGE_NAME:$VERSION/g" $PROJECT_NAME/deployment.yml
+        sed -i "s/image:.*/image: $ACCOUNT_NAME\/$IMAGE_NAME:$IMAGE_VERSION/g" $PROJECT_NAME/deployment.yml
 
     - name: Commit and push changes
       run: |
