chore(build): Remove password env's from Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,12 @@ services:
       - 80:8080
     environment:
       SOLOANVILL_DATABASE_HOST: db
+      SOLOANVILL_DATABASE_PORT: 5432
+      SOLOANVILL_DATABASE_USER: soloanvill
+      SOLOANVILL_DATABASE_PASSWORD: password
+      SOLOANVILL_JENKINS_HOST: 127.0.0.1
+      SOLOANVILL_JENKINS_LOGIN: JENKINS_LOGIN
+      SOLOANVILL_JENKINS_TOKEN: JENKINS_TOKEN
     depends_on:
       db:
         condition: service_started
