--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 env:
   ACCOUNT_NAME: rtav3d
   IMAGE_NAME: soloanvill-backend
-  IMAGE_VERSION: 0.1.3
+  IMAGE_VERSION: 0.1.4
   HOST_PORT: 80
   CONTAINER_PORT: 8080
   PROJECT_NAME: soloanvill_backend
@@ -66,6 +66,7 @@ jobs:
   update_k3s_repo:
     runs-on: ubuntu-24.04
     needs: build_and_test
+    if: github.ref == 'refs/heads/master'
     
     steps:
     - name: Checkout repository K3s
