--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,11 +12,10 @@ env:
   HOST_PORT: 80
   CONTAINER_PORT: 8080
   PROJECT_NAME: soloanvill_backend
-  runs_image: ubuntu-24.04
 
 jobs:
   lint:
-    runs-on: $runs_image
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
@@ -28,7 +27,7 @@ jobs:
           version: v2.1
 
   build_and_test:
-    runs-on: $runs_image
+    runs-on: ubuntu-24.04
     needs: lint
 
     steps:
@@ -78,7 +77,7 @@ jobs:
           See changes: https://github.com/${{ github.repository }}/commit/${{github.sha}}
   
   update_k3s_repo:
-    runs-on: $runs_image
+    runs-on: ubuntu-24.04
     needs: build_and_test
     if: github.ref == 'refs/heads/master'
     
