hotfix(ci): Master -> main on 'update_k3_repo' job

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -82,7 +82,7 @@ jobs:
   update_k3s_repo:
     runs-on: ubuntu-24.04
     needs: build_and_test
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     
     steps:
     - name: Checkout repository K3s
